2011-11-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/performance.php: Changed html element from input 
	text to select in SLA period (seconds) parameter.
	
	Fixes: #3437884

2011-11-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_generalagente.php: Hide agent access 
	graph when "Use agent access graph" is disabled.
	
	Fixes: #3437893

2011-11-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup.php: Added confirmation when "Use Enterprise 
	ACL System" is checked.
	
	Fixes: #3438190

2011-11-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/menu.php: Fixed a wrong sec2 tag that makes enterprise 
	ACLs fail.
	
	Fixes: #3439464

2011-11-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/networkmap.php
	 include/functions_networkmap.php: Added links to agents, modules 
	and groups in single view of networkmaps.
	
	Fixes: #3439487

2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/modules/manage_network_components.php: Removed entities.

2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.data.postgreSQL.sql
	 pandoradb.data.oracle.sql
	 pandoradb_data.sql: Fixed entities in tables tnetwork_component.
	 
	 Fixes: #3441112


2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_agente.php: Added agent description in 
	this view.
	
	Fixes: # 3424337

2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/agent_conf_gis.php
	godmode/agentes/agent_manager.php: Fixed 'Ignore GIS data' and
	change labels.
	
	Fixes: #3437659

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/skin/skin_default/include/styles/tip.css
	images/skin/skin_default/include/styles/pandora.css: Removed 
	background image in tip class.

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Removed entities
	from agent name.