@@ -1,0 +1,12 @@
+<?php
+/**
+ * @package Include/help/en
+ */
+?>
+<h1>Integria URL</h1>
+
+<p>
+The URL of Integria must be the main path of the installation.
+<br><br>
+Example: http://192.169.75.4/integria
+</p>
