@@ -1,0 +1,12 @@
+<?php
+/**
+ * @package Include/help/es
+ */
+?>
+<h1>Integria URL</h1>
+
+<p>
+La URL de Integria debe ser la ruta principal de la instalación.
+<br><br>
+Ejemplo: http://192.169.75.4/integria
+</p>
